<resources>
  <string name="app_name">Challenge</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="action_settings">Settings</string>
  <string name="nav_camera">Import</string>
  <string name="nav_gallery">Gallery</string>
  <string name="nav_slideshow">Slideshow</string>
  <string name="nav_manage">Tools</string>
  <string name="communicate">Communicate</string>>
  <string name="nav_share">Share</string>
  <string name="nav_send">Send</string>
  <string name="hello_world">Hellor World!</string>
  <string name="my_app_title">My App</string>
  <string name="chose_camera">You chose Camera Import.</string>
  <string name="chose_gallery">You chose the Gallery.</string>
  <string name="chose_slideshow">You chose the Slideshow.</string>
  <string name="chose_tools">You chose Tools.</string>
  <string name="chose_share">You chose Share.</string>
  <string name="chose_send">You chose Send.</string>
</resources>
