<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

<group android:checkableBehavior="single">
  <item
    android:id="@+id/nav_camera"
    android:icon="@drawable/ic_nav_camera"
    android:title="@string/nav_camera" />
  <item
    android:id="@+id/nav_gallery"
    android:icon="@drawable/ic_nav_gallery"
    android:title="@string/nav_gallery" />
  <item
    android:id="@+id/nav_slideshow"
    android:icon="@drawable/ic_nav_slideshow"
    android:title="@string/nav_slideshow" />
  <item
    android:id="@+id/nav_manage"
    android:icon="@drawable/ic_nav_manage"
    android:title="@string/nav_manage" />
</group>

<item android:title="@string/communicate">
  <menu>
    <item
      android:id="@+id/nav_share"
      android:icon="@drawable/ic_nav_share"
      android:title="@string/nav_share" />
    <item
      android:id="@+id/nav_send"
      android:icon="@drawable/ic_nav_send"
      android:title="@string/nav_send" />
  </menu>
</item>

</menu>
